--- a/DependOnDefAndUseDemo/PlatformViews/PlatformDogView.xib
+++ b/DependOnDefAndUseDemo/PlatformViews/PlatformDogView.xib
@@ -12,17 +12,17 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PlatformBodyCoordinator" customModule="DependOnDefAndUseDemo" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" ambiguous="YES" id="cVr-Sr-7us" customClass="PlatformBodyView" customModule="DependOnDefAndUseDemo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="408"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" translatesAutoresizingMaskIntoConstraints="NO" id="MVl-iY-6MB">
-                    <rect key="frame" x="0.0" y="0.0" width="393" height="300"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="106" translatesAutoresizingMaskIntoConstraints="NO" id="MVl-iY-6MB">
+                    <rect key="frame" x="0.0" y="0.0" width="393" height="408.66666666666669"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="249" verticalCompressionResistancePriority="249" image="dog_face" translatesAutoresizingMaskIntoConstraints="NO" id="n59-oU-tgP">
-                            <rect key="frame" x="0.0" y="0.0" width="393" height="164"/>
+                            <rect key="frame" x="0.0" y="0.0" width="393" height="166.33333333333334"/>
                         </imageView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" id="iPK-zl-ZZT">
-                            <rect key="frame" x="0.0" y="164" width="393" height="136"/>
+                            <rect key="frame" x="0.0" y="272.33333333333331" width="393" height="136"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" id="8zh-Aj-7vu">
@@ -47,7 +47,7 @@
                                     <viewLayoutGuide key="safeArea" id="kPp-mb-f6p"/>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" id="69M-xM-LvB">
-                                    <rect key="frame" x="0.0" y="20.333333333333343" width="393" height="20.333333333333329"/>
+                                    <rect key="frame" x="0.0" y="20.333333333333371" width="393" height="20.333333333333329"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Happiness:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="VEG-kR-eTO">
@@ -77,12 +77,18 @@
                                     </subviews>
                                     <viewLayoutGuide key="safeArea" id="klM-Xc-GLj"/>
                                 </stackView>
-                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" id="n9m-2a-kp8">
-                                    <rect key="frame" x="0.0" y="40.666666666666657" width="393" height="34.333333333333343"/>
+                                <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" alignment="center" id="n9m-2a-kp8">
+                                    <rect key="frame" x="0.0" y="40.666666666666686" width="393" height="34.333333333333343"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
+                                        <view contentMode="scaleToFill" id="F03-K2-ZO3">
+                                            <rect key="frame" x="0.0" y="17.333333333333314" width="0.0" height="0.0"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <viewLayoutGuide key="safeArea" id="RzT-Qk-Kpk"/>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        </view>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="rQU-wz-j0q">
-                                            <rect key="frame" x="0.0" y="0.0" width="300.66666666666669" height="34.333333333333336"/>
+                                            <rect key="frame" x="105" y="0.0" width="52" height="34.333333333333336"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <state key="normal" title="Button"/>
                                             <buttonConfiguration key="configuration" style="plain">
@@ -93,12 +99,18 @@
                                             </connections>
                                         </button>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="x1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="0Zo-gx-M49">
-                                            <rect key="frame" x="300.66666666666669" y="6.9999999999999982" width="92.333333333333314" height="20.333333333333329"/>
+                                            <rect key="frame" x="254" y="6.9999999999999982" width="16" height="20.333333333333329"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <view contentMode="scaleToFill" id="Eti-Z2-xCk">
+                                            <rect key="frame" x="393" y="17.333333333333314" width="0.0" height="0.0"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <viewLayoutGuide key="safeArea" id="MJT-YH-PfX"/>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        </view>
                                     </subviews>
                                     <viewLayoutGuide key="safeArea" id="bV2-8v-0Vl"/>
                                 </stackView>
@@ -114,7 +126,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" id="7rV-Ar-2AK">
-                                            <rect key="frame" x="0.0" y="20.333333333333314" width="393" height="20.333333333333329"/>
+                                            <rect key="frame" x="0.0" y="20.333333333333371" width="393" height="20.333333333333329"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dog name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ArN-Ly-4ZX">
@@ -166,6 +178,7 @@
                 <constraint firstItem="MVl-iY-6MB" firstAttribute="top" secondItem="cVr-Sr-7us" secondAttribute="top" id="gBF-Ne-Cl0"/>
                 <constraint firstAttribute="bottom" secondItem="MVl-iY-6MB" secondAttribute="bottom" id="rZn-sY-DZE"/>
             </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="animalFaceView" destination="n59-oU-tgP" id="X4n-1n-7xr"/>
                 <outlet property="dogNameLabel" destination="UID-g7-1Uo" id="bFt-db-YQd"/>
@@ -175,7 +188,7 @@
                 <outlet property="usesDogNameStateView" destination="EHc-1h-IYp" id="mgw-ri-keg"/>
                 <outlet property="usesHappinessStateView" destination="pWF-hx-N6o" id="So2-xv-mpu"/>
             </connections>
-            <point key="canvasLocation" x="-54.198473282442748" y="36.619718309859159"/>
+            <point key="canvasLocation" x="-54.198473282442748" y="-276.76056338028172"/>
         </view>
     </objects>
     <resources>
@@ -187,7 +200,7 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
